// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkFee renders a NetworkFee in a loading state 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 15,
            "lineHeight": 16,
          }
        }
        suppressHighlighting={true}
      >
        Network fee
      </Text>
      <svg
        color="#222222"
        data-file-name="SvgInfoCircle"
        height={20}
        width={20}
      />
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3939391a",
          "borderBottomColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderBottomWidth": 1,
          "borderColor": "transparent",
          "borderLeftColor": "transparent",
          "borderLeftWidth": 1,
          "borderRightColor": "transparent",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "transparent",
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#393939",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 13,
            "lineHeight": 16,
            "paddingTop": 1,
          }
        }
        suppressHighlighting={true}
      >
        Ethereum
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 15,
          "lineHeight": 16,
        }
      }
      suppressHighlighting={true}
    >
      •
    </Text>
    <View
      sentry-label="SpinningLoader"
      style={
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "transform": [
            {
              "rotateZ": "0deg",
            },
          ],
        }
      }
    >
      <svg
        color="#222222"
        data-file-name="SvgCircleSpinner"
        height={20}
        width={20}
      />
    </View>
  </View>
</View>
`;

exports[`NetworkFee renders a NetworkFee in an error state 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 15,
            "lineHeight": 16,
          }
        }
        suppressHighlighting={true}
      >
        Network fee
      </Text>
      <svg
        color="#222222"
        data-file-name="SvgInfoCircle"
        height={20}
        width={20}
      />
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3939391a",
          "borderBottomColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderBottomWidth": 1,
          "borderColor": "transparent",
          "borderLeftColor": "transparent",
          "borderLeftWidth": 1,
          "borderRightColor": "transparent",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "transparent",
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#393939",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 13,
            "lineHeight": 16,
            "paddingTop": 1,
          }
        }
        suppressHighlighting={true}
      >
        Ethereum
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 15,
          "lineHeight": 16,
        }
      }
      suppressHighlighting={true}
    >
      •
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#7D7D7D",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 15,
            "lineHeight": 16,
          }
        }
        suppressHighlighting={true}
      >
        N/A
      </Text>
    </View>
  </View>
</View>
`;

exports[`NetworkFee renders a NetworkFee normally 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 15,
            "lineHeight": 16,
          }
        }
        suppressHighlighting={true}
      >
        Network fee
      </Text>
      <svg
        color="#222222"
        data-file-name="SvgInfoCircle"
        height={20}
        width={20}
      />
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3939391a",
          "borderBottomColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderBottomWidth": 1,
          "borderColor": "transparent",
          "borderLeftColor": "transparent",
          "borderLeftWidth": 1,
          "borderRightColor": "transparent",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "transparent",
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#393939",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 13,
            "lineHeight": 16,
            "paddingTop": 1,
          }
        }
        suppressHighlighting={true}
      >
        Ethereum
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 15,
          "lineHeight": 16,
        }
      }
      suppressHighlighting={true}
    >
      •
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 15,
            "lineHeight": 16,
          }
        }
        suppressHighlighting={true}
      >
        $500.00
      </Text>
    </View>
  </View>
</View>
`;
